Name:                ankerias
Version:             0.1
Synopsis:            Home automation
Description:         Turn electric switch on/off
License:             AllRightsReserved
Author:              Kimmo Koskinen
Maintainer:          kimmo@tiuhti.net
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable ankerias
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.10,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    process                   >= 1.0.1.5,
    regex-tdfa                >= 1.1.8
  
  Extra-libraries:
    telldus-core

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind 
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
